* Fixed legend and added overlap gene to it. Fixed issue with Legend clipping due to incorrect aspect ratio calculation of legend.

--- a/dcc-portal-ui/src/main/js/app/styles/_modules/_pathwayviewer.scss
+++ b/dcc-portal-ui/src/main/js/app/styles/_modules/_pathwayviewer.scss
@@ -188,6 +188,12 @@ $compartmentBorder:#ffc38b;
   stroke-width:$lineThicknessThick;
 }
 
+.RenderableOverlappedEntitySet {
+  stroke: #000;
+  stroke-width: 5px;
+  fill: #fff;
+}
+
 .ProcessNode{
   stroke: $primaryNodeBorder;
   stroke-width:$lineThicknessThicker;
@@ -299,6 +305,18 @@ $compartmentBorder:#ffc38b;
   background: white;
 }
 
+.pathway-legend-container {
+  //overflow-x: visible;
+  //overflow-y: auto;
+  width: 100%;
+  height: 100%;
+
+  .pathway-legend-content {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .pathway-info{
   width: 30%;
   opacity: 0.95;
@@ -324,7 +342,7 @@ $compartmentBorder:#ffc38b;
   text-align: center !important;
 }
 
-.gene-overlap-result .pathway-gene-label  a {
+.gene-overlap-result  a {
   color: #ff9900;
 }
 
